[package]
name = "ui_utils"
version = "0.1.0"
authors = ["Thea <theah0032@gmail.com>"]
edition = "2018"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"

crossterm = {version = "0.21.0", optional = true}

[features]
crossterm-support = ["crossterm"]