[package]
name = "ui_utils"
version = "0.1.0"
authors = ["Thea <theah0032@gmail.com>"]
edition = "2018"
keywords = ["CLI", "terminal", "output"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A Rust library for building a terminal-based UI with multiple elements, without hassle."
repository = "https://github.com/thea0032/grid_ui"
readme = "README.md"
license = "MIT"
documentation = "TBA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"

crossterm = {version = "0.21.0", optional = true}

serde = { version = "1.0", optional = true, features = ["derive"] }